--- a/StudentList/StudentList/View/MainView.xaml
+++ b/StudentList/StudentList/View/MainView.xaml
@@ -4,11 +4,19 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudentList"
+        xmlns:vm="clr-namespace:StudentList.ViewModel"
         mc:Ignorable="d"
         Title="MainWindow" 
         Height="450" 
         Width="800">
+
+    <Window.DataContext>
+        <vm:MainViewModel/>
+    </Window.DataContext>
+    
     <Grid>
-        
+        <DataGrid>
+            
+        </DataGrid>
     </Grid>
 </Window>
